# privjail

./: .ruff.toml  README.md  pyproject.toml
.github/workflows/: cla.yaml
examples/: basic_query.py  concat_tdrive.sql  decision_tree.py  download_dataset_mnist.py  download_dataset_tdrive.bash  dpsgd.py  drive_heatmap.html  drive_heatmap.py
examples/schema/: mnist.json  tdrive.json
src/pripri/: __init__.py  distance.py  mechanism.py  pandas.py  prisoner.py  provenance.py  util.py
src/privjail/: __init__.py  __main__.py  alignment.py  array_base.py  distance.py  helper.py  mechanism.py  pandas.py  prisoner.py  provenance.py  realexpr.py  util.py
src/privjail/accountants/: __init__.py  approx.py  dummy.py  pure.py  rdp.py  state.py  util.py  zcdp.py
src/privjail/egrpc/: __init__.py  compiler.py  decorator.py  entry_point.py  exception.py  grpc_interface.py  instance_ref.py  names.py  proto_interface.py  registry.py  util.py
src/privjail/numpy/: __init__.py  array.py  domain.py  functions.py  io.py  linalg.py  serialization.py  util.py
src/privjail/pandas/: __init__.py  dataframe.py  domain.py  functions.py  groupby.py  serialization.py  series.py  util.py
test/: test_accountants.py  test_distance.py  test_egrpc.py  test_numpy.py  test_pandas.py  test_pandas_uldp.py  test_prisoner.py  test_provenance.py  test_realexpr.py
