[project]
name = "privjail"
version = "0.1.0"
description = "Enforcing differential privacy in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio-tools>=1.69.0",
    "grpcio>=1.69.0",
    "numpy==2.1.3",
    "pandas>=2.2.3",
    "sympy>=1.13.3",
    "multimethod>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bokeh>=3.7.3",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3.241126",
    "pytest>=8.3.3",
    "ruff>=0.13.3",
]
