[project]
name = "privjail"
version = "0.1.1"
description = "Enforcing differential privacy in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "egrpc>=0.1.0",
    "numpy==2.1.3",
    "pandas>=2.2.3,<3",
    "sympy>=1.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bokeh>=3.7.3",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.3.241126,<3",
    "pytest>=8.3.3",
    "ruff>=0.13.3",
]
